objects/testcustom1__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>testcustom1</relationshipLabel>
        <relationshipName>testcustom1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>testcustom1</relationshipLabel>
        <relationshipName>testcustom1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_equals_blank__c</fullName>
        <formula>ISBLANK( Case2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case equals blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comentarios_del_caso__c</fullName>
        <label>Comentarios del caso</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Comentarios_del_caso_largos__c</fullName>
        <label>Comentarios del caso largos</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Descripcion_del_caso__c</fullName>
        <label>Descripcion del caso</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Trainee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trainee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Trainee__c.Email__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Trainee__c</referenceTo>
        <relationshipLabel>testcustom1</relationshipLabel>
        <relationshipName>testcustom1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Investigating</fullName>
                </value>
                <value>
                    <fullName>Reproduction</fullName>
                </value>
                <value>
                    <fullName>Patch Creation</fullName>
                </value>
                <value>
                    <fullName>Patch Testing</fullName>
                </value>
                <value>
                    <fullName>Deployed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>testcustom1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>testcustom1</label>
        <referenceTo>testcustom1__c</referenceTo>
        <relationshipLabel>testcustom1</relationshipLabel>
        <relationshipName>testcustom1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>text__c</fullName>
        <formula>Trainee__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>text Trainee name</label>
        <type>Text</type>
    </fields>
    <label>testcustom1</label>
    <listViews>
        <fullName>Alle</fullName>
        <columns>Case2__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>testcustom1</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>testcustom1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>true</fullName>
        <active>true</active>
        <errorConditionFormula>true</errorConditionFormula>
        <errorMessage>this is an error message</errorMessage>
    </validationRules>
</CustomObject>